tests/errors/reproduce_bug_01.py
# TEST EXPECTS SEMANTIC ERROR
'a' = 1
